# patchguard

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml  lint.yml  security.yml  tests.yml
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
scripts/: deploy.sh  health-check.sh  migrate-db.sh  setup.sh
src/: config.py  dependencies.py  main.py
src/agents/: base_agent.py  dependency_agent.py  quality_agent.py  security_agent.py
src/api/: health.py  reviews.py  webhooks.py
src/consumers/: celery_tasks.py  handlers.py  kafka_consumer.py
src/db/: database.py  mongodb.py  redis_client.py
src/models/: mongodb_models.py  postgres_models.py  schemas.py
src/services/: cache_service.py  event_store.py  github_service.py  kafka_producer.py  orchestrator.py
src/utils/: cache_keys.py  github_utils.py  logging.py  validators.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/test_agents/: test_quality_agent.py
tests/test_api/: test_health.py  test_reviews.py  test_webhooks.py
tests/test_consumers/: test_kafka_consumer.py
tests/test_services/: test_cache_service.py  test_github_service.py  test_orchestrator.py
